# webexperiments

./: LICENSE  README.md
webGLTest/: CMakeLists.txt  build.sh  run.sh
webGLTest/engine/: CMakeLists.txt  camera.h  light.h  renderer.cpp  renderer.h  vertex.h
webGLTest/engine/data/models/space/ships/fighter_blocky_01/: fighter_blocky_01.mtl
webGLTest/engine/data/shaders/fragment/: phong.frag
webGLTest/engine/data/shaders/vertex/: default.vert
webGLTest/engine/data_projects/models/primitives/cube/: cube.blend
webGLTest/engine/data_projects/models/space/ships/fighter_blocky_01/: fighter_blocky_01.blend
webGLTest/engine/geometry/: geometry.cpp  geometry.h  objmodel.cpp
webGLTest/engine/shaders/: shader.cpp  shader.h  shader_lightinterface.cpp  shader_lightinterface.h  shader_materialinterface.cpp  shader_materialinterface.h  shader_phong.h
webGLTest/engine/textures/: texture.h  textureset.h
webGLTest/src/: CMakeLists.txt  client.cpp  geometry.cpp  geometry.h  index.html  light.h  main.cpp  material.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_diffuse.cpp  shader_diffuse.h  textureset.h  vertex.h
webGLTest/src/data/shaders/fragment/: diffuse.frag  phong.frag
webGLTest/src/data/shaders/vertex/: default.vert
webGLTest/src/entities/: laser.cpp  laser.h  player.cpp  player.h
webGLTest/src/geometry/: geometry.cpp  geometry.h  objmodel.cpp  objmodel.h
webGLTest/src/html/: index.html
webGLTest/src/shaders/: shader.cpp  shader.h  shader_diffuse.cpp  shader_diffuse.h  shader_lightinterface.cpp  shader_lightinterface.h  shader_materialinterface.cpp  shader_materialinterface.h  shader_phong.cpp  shader_phong.h
webGLTest/src/shaders/fragment/: default.frag
webGLTest/src/shaders/vertex/: default.vert
webGLTest/src/textures/: texture.cpp  texture_sdl2image.cpp  texture_sdl2image.h
